added pytorch chapter

--- a/coursebook/_toc.yml
+++ b/coursebook/_toc.yml
@@ -10,6 +10,7 @@ chapters:
 - file: 04_graphics
 - file: 05_sc_with_scipy
 - file: 06_sklearn
-- file: 07_getting_data
-- file: 08_digital_reporting
+- file: 07_torch
+- file: 08_getting_data
+- file: 09_digital_reporting
 - file: A_math_statistics
